--- a/src/style.css
+++ b/src/style.css
@@ -69,3 +69,72 @@ body{
     font-size: 12px;
     color: #2B283A;
 }
+
+
+
+@media (max-width: 1000px) {
+
+    .header{
+        width: 500px;
+    }
+
+    .container{
+        width: 500px;
+    }
+
+    .img{
+        width: 150px;
+        height: 200px;
+    }
+
+    .locationUrl{
+        font-size: .8rem;
+    }
+
+    .info{
+        font-size: .8rem;
+    }
+
+    .title{
+        font-size: 1.6rem;
+    }
+
+    .date{
+        font-size: .8rem;
+    }
+
+}
+
+
+@media (max-width: 600px) {
+
+    .header{
+        width: 300px;
+    }
+
+    .container{
+        width: 300px;
+    }
+
+    .img{
+        width: 120px;
+        height: 170px;
+    }
+
+    .locationUrl{
+        font-size: .6rem;
+    }
+
+    .info{
+        font-size: .6rem;
+    }
+
+    .title{
+        font-size: 1.1rem;
+    }
+
+    .date{
+        font-size: .6rem;
+    }
+
+}
