items aligning on max-width of 600px

--- a/src/style.css
+++ b/src/style.css
@@ -117,7 +117,12 @@ body{
         flex-direction: column;
         width: 300px;
         padding: 10px;
+        align-items: center;
+    }
 
+    .info {
+        align-items: center;
+        margin: 0;
     }
 
     .img{
